--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,7 @@
 .navbar {
     background-color: #2874f0;
 }
- 
- 
- 
+
 .navbar-brand {
     margin-left: 120px;
 }
@@ -61,46 +59,80 @@
     margin-left: 100px;
 }
 
-.deals {
-    margin: 100px;
-}
-/* Style for both the prev and next buttons */
-.carousel-control-prev, .carousel-control-next {
-    background-color: white;        
-    border: none;                   
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    color: black;                   
-    font-weight: bold;              
-    width: 40px;                   
-    height: 40px;                   
-    display: flex; 
-    padding: 25px;                
-    align-items: center;            
-    justify-content: center;                    
-    position: absolute;             
-    top: 50%;                       
-    transform: translateY(-50%);    
-    z-index: 1;                    
-    opacity: 0.8;                   
-    transition: opacity 0.3s ease;  
+a {
+    text-decoration: none;
+
+    i {
+        color: revert;
+    }
 }
 
+:root {
+    --transition_time: 0.5s;
+}
+
+.logo {
+    background: #fff;
+    width: auto;
+    height: fit-content;
+}
+
+
+@media screen and (max-width:478px) {
+    .item_title {
+        width: 10rem;
+    }
+}
+
+.card_offerCrousal {
+    width: 25%;
+}
+
+.card_wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+.card_offerCrousal img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+.card_offerCrousal img:hover {
+    object-fit: contain;
+    transform: scale(1.04);
+    transition: transform 0.3s;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: white;
+    height: 20%;
+    padding: 0rem 1.5rem;
+}
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next,
 .carousel-control-prev {
-    left: 10px;       
-}             
-
-.carousel-control-next {
-    right: 10px;     
-}               
-
-/* Hover effect to make buttons more prominent */
-.carousel-control-prev:hover, .carousel-control-next:hover {
-    opacity: 1;                     
+    opacity: 1;
+    width: auto;
 }
 
-/* Style for the arrows inside the buttons */
-.carousel-control-prev-icon, .carousel-control-next-icon {
-    font-size: 20px;              
-    color: black;                   
+@media (min-width: 768px) {
+    .card_offerCrousal img {
+        height: 11em;
+    }
 }
 
+.small_screen_product_img {
+    height: 5rem;
+}
